{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 54,
  "lineage": "e6987bb3-84ed-75ee-65ca-e777bf9ebeed",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.128.0.1",
            "id": "projects/lustrous-camera-352403/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/networks/default",
            "private_ip_google_access": false,
            "project": "lustrous-camera-352403",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/regions/us-central1/subnetworks/default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "ah"
              },
              {
                "ports": [],
                "protocol": "esp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "sctp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-07-05T01:08:23.014-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-all",
            "log_config": [],
            "name": "k8s-test-565b15d9-all",
            "network": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/networks/default",
            "priority": 1000,
            "project": "lustrous-camera-352403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-all",
            "source_ranges": [
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_id.instance-prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-07-05T01:08:22.907-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-vms",
            "log_config": [],
            "name": "k8s-test-565b15d9-vms",
            "network": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/networks/default",
            "priority": 1000,
            "project": "lustrous-camera-352403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-vms",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_id.instance-prefix"
          ]
        }
      ]
    },
    {
      "module": "module.default-pool-mig",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-05T01:06:15.754-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-default-pool-vm-ssh",
            "log_config": [],
            "name": "k8s-test-565b15d9-default-pool-vm-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/networks/default",
            "priority": 1000,
            "project": "lustrous-camera-352403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-default-pool-vm-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_id.instance-prefix"
          ]
        }
      ]
    },
    {
      "module": "module.default-pool-mig",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mig-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-05T01:06:15.509-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-default-pool-vm-hc",
            "log_config": [],
            "name": "k8s-test-565b15d9-default-pool-vm-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/networks/default",
            "priority": 1000,
            "project": "lustrous-camera-352403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-default-pool-vm-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-service"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_id.instance-prefix"
          ]
        }
      ]
    },
    {
      "module": "module.master-mig",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-05T01:06:15.721-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-master-vm-ssh",
            "log_config": [],
            "name": "k8s-test-565b15d9-master-vm-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/networks/default",
            "priority": 1000,
            "project": "lustrous-camera-352403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-master-vm-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_id.instance-prefix"
          ]
        }
      ]
    },
    {
      "module": "module.master-mig",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mig-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-05T01:06:15.946-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-master-vm-hc",
            "log_config": [],
            "name": "k8s-test-565b15d9-master-vm-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/networks/default",
            "priority": 1000,
            "project": "lustrous-camera-352403",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lustrous-camera-352403/global/firewalls/k8s-test-565b15d9-master-vm-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-service"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_id.instance-prefix"
          ]
        }
      ]
    }
  ]
}